package tk.designpattern.uml;

public abstract class DaoSupport {
    public void save(Object entity){}
    public void delete(Object id){}
}
