package tk.designpattern.uml;

public class Head {
}
