package tk.designpattern.uml;

public class IDCard {
    private Person person;

    public void setPerson(Person person) {
        this.person = person;
    }
}
