package tk.designpattern.uml;

public interface PersonService {
    void save(Object entity);
    void delete(Object id);
}
